--- a/old-html/1about-us.html
+++ b/old-html/1about-us.html
@@ -7,37 +7,36 @@
     <link rel="icon" type="image/png" sizes="32x32" href="static/images/favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="static/images/favicon_io/favicon-16x16.png">
     <link rel="manifest" href="static/images/favicon_io/site.webmanifest">
-    <script type="module" src="src/JS/main.js"></script>
+    <link rel="stylesheet" href="static/css/main.css" />
+    <script type="module" src="src/JS/main.js" defer></script>
     <script
       src="https://kit.fontawesome.com/04d50240d2.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="static/css/main.css" />
-    <title>Biograf Luleå</title>
+    <title>About Us</title>
   </head>
-
   <body>
     <header class="sec">
       <div class="header-content-wrap sec-cont">
-        <a href="index" class="logo"
+        <a href="index.html" class="logo"
           ><img src="static/images/Logo.png" alt="logo"
         /></a>
         <nav class="header-nav">
           <button class="header-nav-toggle"></button>
           <menu class="header-menu">
             <li>
-              <a class="header-menu-item active" href="index">Hem</a>
+              <a class="header-menu-item" href="index.html">Hem</a>
             </li>
             <li>
-              <a class="header-menu-item" href="about-us">Om oss</a>
+              <a class="header-menu-item active" href="about-us.html">Om oss</a>
             </li>
             <li>
-              <a class="header-menu-item" href="under-construction"
+              <a class="header-menu-item" href="under-construction.html"
                 >Biljettinfo</a
               >
             </li>
             <li>
-              <a class="header-menu-item" href="under-construction"
+              <a class="header-menu-item" href="under-construction.html"
                 >Presentkort</a
               >
             </li>
@@ -54,14 +53,14 @@
         <li class="movies-nav">
           <ul class="movies-nav-list">
             <li class="movies-nav-element">
-              <a href="movies" class="show-all-movies">Filmer </a>
+              <a href="movies.html" class="show-all-movies">Filmer </a>
             </li>
           </ul>
         </li>
         <li class="movies-nav">
           <ul class="movies-nav-list">
             <li class="movies-nav-element">
-              <a href="salons"
+              <a href="salons.html"
                 >Salonger </a
               >
             </li>
@@ -70,7 +69,7 @@
         <li class="movies-nav">
           <ul class="movies-nav-list">
             <li class="movies-nav-element">
-              <a href="restaurant"
+              <a href="restaurant.html"
                 >Restaurang </a
               >
             </li>
@@ -79,7 +78,7 @@
         <li class="movies-nav">
           <ul class="movies-nav-list">
             <li class="movies-nav-element">
-              <a href="events"
+              <a href="events.html"
                 >Events </a
               >
             </li>
@@ -88,15 +87,48 @@
         <li class="movies-nav">
           <ul class="movies-nav-list">
             <li class="movies-nav-element">
-              <a href="under-construction">Kontakt</a>
+              <a href="under-construction.html">Kontakt</a>
             </li>
           </ul>
         </li>
       </ul>
     </div>
     </nav>
-    <div>{{{body}}}</div>
-
+    <main class="main-container sec">
+      <div class="main-content sec-cont">
+        <h1 class="aboutus-title">Om oss</h1>
+        <p class="about-us-text">
+          Året är 2009 och den redan framgångsrike entrepenören Sten Berg och
+          hans fru har bestämt sig för en trevlig utekväll tillsammans med
+          middag och bio. De har precis varit och ätit och ska gå till bion som
+          ligger på en promenads avstånd. På vägen till bion så börjar plötsligt
+          regnet att falla i rikliga mängder. När Sten och hans fru kliver in i
+          bions lokaler så är de så blöta att de lämnar pölar av vatten på
+          golvet, besvikna och blöta så bestämmer sig paret för att strunta i
+          filmen och åka hem. Väl hemma så får Sten iden om att ta bort
+          pormenaden mellan mat och en bio. Precis så fick det bli, Sten började
+          direkt att planera och två år senare, år 2011 så öppnar "Luleå Bio"
+          dörrarna för allmänheten med restaurang och bio i samma lokaler.
+          <br />
+          <br />
+          Vi på Luleå Bio strävar ständigt emot att ge våra besökare den bästa
+          möjliga upplevelsen och jobbar därför hårt med att lyssna på vad ni
+          som besöker oss har att säga. Vi vill finnas kvar för er så länge som
+          möjligt och ge er en trevlig upplevelse så därför tänker vi också på
+          klimatet så därmed är maten som vi serverar er närproducerad och av
+          hög kvalitet. Ni är varmt välkomna till oss!
+        </p>
+        <img
+          class="about-us-img"
+          src="static\images\about-us-img.png"
+          alt="Bild från utsidan av biografen."
+        />
+        <p class="contact-text-about-us">
+          Har du några frågor, tips eller andra tankar? Du är välkommen att
+          kontakta oss här eller ringa 0920-454545
+        </p>
+      </div>
+    </main>
     <footer class="footer sec">
       <div class="footer-content sec-cont">
         <nav class="footer-nav">
