--- a/old-html/1booking.html
+++ b/old-html/1booking.html
@@ -7,40 +7,32 @@
     <link rel="icon" type="image/png" sizes="32x32" href="static/images/favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="static/images/favicon_io/favicon-16x16.png">
     <link rel="manifest" href="static/images/favicon_io/site.webmanifest">
-    <script type="module" src="src/JS/main.js"></script>
+    <title>Booking</title>
+    <link rel="stylesheet" href="static/css/main.css" />
+    <script type="module" src="src/JS/main.js" defer></script>
+    <script type="module" src="src/JS/booking.js" defer></script>
     <script
       src="https://kit.fontawesome.com/04d50240d2.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="static/css/main.css" />
-    <title>Biograf Luleå</title>
   </head>
-
   <body>
     <header class="sec">
       <div class="header-content-wrap sec-cont">
-        <a href="index" class="logo"
+        <a href="index.html" class="logo"
           ><img src="static/images/Logo.png" alt="logo"
         /></a>
         <nav class="header-nav">
           <button class="header-nav-toggle"></button>
           <menu class="header-menu">
             <li>
-              <a class="header-menu-item active" href="index">Hem</a>
+              <a class="header-menu-item active" href="index.html">Hem</a>
             </li>
             <li>
-              <a class="header-menu-item" href="about-us">Om oss</a>
+              <a class="header-menu-item" href="about-us.html">Om oss</a>
             </li>
-            <li>
-              <a class="header-menu-item" href="under-construction"
-                >Biljettinfo</a
-              >
-            </li>
-            <li>
-              <a class="header-menu-item" href="under-construction"
-                >Presentkort</a
-              >
-            </li>
+            <li><a class="header-menu-item" href="under-construction.html">Biljettinfo</a></li>
+            <li><a class="header-menu-item" href="under-construction.html">Presentkort</a></li>
           </menu>
         </nav>
       </div>
@@ -54,14 +46,14 @@
         <li class="movies-nav">
           <ul class="movies-nav-list">
             <li class="movies-nav-element">
-              <a href="movies" class="show-all-movies">Filmer </a>
+              <a href="movies.html" class="show-all-movies">Filmer </a>
             </li>
           </ul>
         </li>
         <li class="movies-nav">
           <ul class="movies-nav-list">
             <li class="movies-nav-element">
-              <a href="salons"
+              <a href="salons.html"
                 >Salonger </a
               >
             </li>
@@ -70,7 +62,7 @@
         <li class="movies-nav">
           <ul class="movies-nav-list">
             <li class="movies-nav-element">
-              <a href="restaurant"
+              <a href="restaurant.html"
                 >Restaurang </a
               >
             </li>
@@ -79,7 +71,7 @@
         <li class="movies-nav">
           <ul class="movies-nav-list">
             <li class="movies-nav-element">
-              <a href="events"
+              <a href="events.html"
                 >Events </a
               >
             </li>
@@ -88,15 +80,16 @@
         <li class="movies-nav">
           <ul class="movies-nav-list">
             <li class="movies-nav-element">
-              <a href="under-construction">Kontakt</a>
+              <a href="under-construction.html">Kontakt</a>
             </li>
           </ul>
         </li>
       </ul>
     </div>
     </nav>
-    <div>{{{body}}}</div>
-
+    <main class="main-container sec">
+        <div id="booking-render-container" class="sec-cont" ></div>
+    </main>
     <footer class="footer sec">
       <div class="footer-content sec-cont">
         <nav class="footer-nav">
