--- a/old-html/events.html
+++ b/old-html/events.html
@@ -19,25 +19,25 @@
   <body>
     <header class="sec">
       <div class="header-content-wrap sec-cont">
-        <a href="index" class="logo"
+        <a href="index.html" class="logo"
           ><img src="static/images/Logo.png" alt="logo"
         /></a>
         <nav class="header-nav">
           <button class="header-nav-toggle"></button>
           <menu class="header-menu">
             <li>
-              <a class="header-menu-item active" href="index">Hem</a>
+              <a class="header-menu-item active" href="index.html">Hem</a>
             </li>
             <li>
-              <a class="header-menu-item" href="about-us">Om oss</a>
+              <a class="header-menu-item" href="about-us.html">Om oss</a>
             </li>
             <li>
-              <a class="header-menu-item" href="under-construction"
+              <a class="header-menu-item" href="under-construction.html"
                 >Biljettinfo</a
               >
             </li>
             <li>
-              <a class="header-menu-item" href="under-construction"
+              <a class="header-menu-item" href="under-construction.html"
                 >Presentkort</a
               >
             </li>
@@ -54,14 +54,14 @@
         <li class="movies-nav">
           <ul class="movies-nav-list">
             <li class="movies-nav-element">
-              <a href="movies" class="show-all-movies">Filmer </a>
+              <a href="movies.html" class="show-all-movies">Filmer </a>
             </li>
           </ul>
         </li>
         <li class="movies-nav">
           <ul class="movies-nav-list">
             <li class="movies-nav-element">
-              <a href="salons"
+              <a href="salons.html"
                 >Salonger </a
               >
             </li>
@@ -70,7 +70,7 @@
         <li class="movies-nav">
           <ul class="movies-nav-list">
             <li class="movies-nav-element">
-              <a href="restaurant"
+              <a href="restaurant.html"
                 >Restaurang </a
               >
             </li>
@@ -79,7 +79,7 @@
         <li class="movies-nav">
           <ul class="movies-nav-list">
             <li class="movies-nav-element">
-              <a href="events"
+              <a href="under-construction.html" id="events-id"
                 >Events </a
               >
             </li>
@@ -88,14 +88,44 @@
         <li class="movies-nav">
           <ul class="movies-nav-list">
             <li class="movies-nav-element">
-              <a href="under-construction">Kontakt</a>
+              <a href="under-construction.html">Kontakt</a>
             </li>
           </ul>
         </li>
       </ul>
     </div>
     </nav>
-    <div>{{{body}}}</div>
+
+    <main class="sec">
+      <section class="sec-cont">
+        <section class="sec-cont">
+          <div class="salons sec-cont">
+            <div class="undercategory">
+              <h1 class="events-title">Our events</h1>
+              <nav class="sec">
+                <ul class="events-category-list">
+                  <li class="events-category-element">
+                    <a href="under-construction.html" >Live på bio</a>
+                  </li>
+                  <li class="events-category-element">
+                    <a href="under-construction.html" >Specialvisningar</a>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+        <div class="under-construction-container">
+          <h1 class="under-construction-heading">Under Construction</h1>
+          <div class="under-construction-icon-container">
+            <i class="fa-solid fa-wrench fa-10x"></i>
+          </div>
+          <div class="under-construction-btn-container">
+            <a href="index.html" class="under-construction-link-home"
+              >Tillbaks hem</a
+            >
+          </div>
+        </div>
+      </section>
+    </main>
 
     <footer class="footer sec">
       <div class="footer-content sec-cont">
