--- a/old-html/index.html
+++ b/old-html/index.html
@@ -19,25 +19,25 @@
   <body>
     <header class="sec">
       <div class="header-content-wrap sec-cont">
-        <a href="index" class="logo"
+        <a href="index.html" class="logo"
           ><img src="static/images/Logo.png" alt="logo"
         /></a>
         <nav class="header-nav">
           <button class="header-nav-toggle"></button>
           <menu class="header-menu">
             <li>
-              <a class="header-menu-item active" href="index">Hem</a>
+              <a class="header-menu-item active" href="index.html">Hem</a>
             </li>
             <li>
-              <a class="header-menu-item" href="about-us">Om oss</a>
+              <a class="header-menu-item" href="about-us.html">Om oss</a>
             </li>
             <li>
-              <a class="header-menu-item" href="under-construction"
+              <a class="header-menu-item" href="under-construction.html"
                 >Biljettinfo</a
               >
             </li>
             <li>
-              <a class="header-menu-item" href="under-construction"
+              <a class="header-menu-item" href="under-construction.html"
                 >Presentkort</a
               >
             </li>
@@ -54,14 +54,14 @@
         <li class="movies-nav">
           <ul class="movies-nav-list">
             <li class="movies-nav-element">
-              <a href="movies" class="show-all-movies">Filmer </a>
+              <a href="movies.html" class="show-all-movies">Filmer </a>
             </li>
           </ul>
         </li>
         <li class="movies-nav">
           <ul class="movies-nav-list">
             <li class="movies-nav-element">
-              <a href="salons"
+              <a href="salons.html"
                 >Salonger </a
               >
             </li>
@@ -70,7 +70,7 @@
         <li class="movies-nav">
           <ul class="movies-nav-list">
             <li class="movies-nav-element">
-              <a href="restaurant"
+              <a href="restaurant.html"
                 >Restaurang </a
               >
             </li>
@@ -79,7 +79,7 @@
         <li class="movies-nav">
           <ul class="movies-nav-list">
             <li class="movies-nav-element">
-              <a href="events"
+              <a href="events.html"
                 >Events </a
               >
             </li>
@@ -88,14 +88,100 @@
         <li class="movies-nav">
           <ul class="movies-nav-list">
             <li class="movies-nav-element">
-              <a href="under-construction">Kontakt</a>
+              <a href="under-construction.html">Kontakt</a>
             </li>
           </ul>
         </li>
       </ul>
     </div>
     </nav>
-    <div>{{{body}}}</div>
+
+    <main class="sec clear-main">
+      <div class="sec-cont">
+        <!-- Movie Accordion -->
+        <section class="accordion-cont">
+          <!-- Next / Before Buttons -->
+          <button class="slide-btn prev">
+            <img
+              src="static/images/arrow-left-circle.svg"
+              alt="previosly movie"
+            />
+          </button>
+          <button class="slide-btn next">
+            <img src="static/images/arrow-right-circle.svg" alt="next movie" />
+          </button>
+
+          <!-- Sliders -->
+          <div class="slider">
+            <section class="slide" id="first-slide">
+              <div class="slide-content">
+                <h2>MOVIE NAME</h2>
+                <h3>SUBTITLE</h3>
+                <a href="/" class="slide-btn">Biljetter</a>
+              </div>
+              <img
+                src="https://biografspegeln.se/media/stills/3005/1024/04e39f44-fc79-42d9-b724-ff8cebc3ef03.jpeg"
+                alt="movie banner"
+              />
+            </section>
+
+            <section class="slide">
+              <div class="slide-content">
+                <h2>MOVIE NAME</h2>
+                <h3>SUBTITLE</h3>
+                <a href="/" class="slide-btn">Biljetter</a>
+              </div>
+              <img
+                src="https://biografspegeln.se/media/stills/2801/1024/57cda8f6-7101-4430-bd5f-95c841e0ac37.jpg"
+                alt="movie banner"
+              />
+            </section>
+            <section class="slide">
+              <div class="slide-content">
+                <h2>MOVIE NAME</h2>
+                <h3>SUBTITLE</h3>
+                <a href="/" class="slide-btn">Biljetter</a>
+              </div>
+              <img
+                src="https://biografspegeln.se/media/stills/2956/1024/ec0b06e3-1860-4394-85ff-d590d6ced08c.jpg"
+                alt="movie banner"
+              />
+            </section>
+            <section class="slide">
+              <div class="slide-content">
+                <h2>MOVIE NAME</h2>
+                <h3>SUBTITLE</h3>
+                <a href="/" class="slide-btn">Biljetter</a>
+              </div>
+              <img
+                src="https://biografspegeln.se/media/stills/3031/1024/ed7903e9-a804-4790-8740-58b3e9c7c4ed.jpeg"
+                alt="movie banner"
+              />
+            </section>
+          </div>
+        </section>
+      </div>
+
+      <script src="src/JS/accordion.js"></script>
+
+      <section class="show-movies sec-cont">
+        <div class="movies-lists-container">
+          <h1 class="index-title">PÅ BION JUST NU</h1>
+          <h2>KOMEDI</h2>
+          <ul class="comedy-start-list list-styling"></ul>
+          <h2>ACTION</h2>
+          <ul class="action-start-list list-styling"></ul>
+          <h2>DRAMA</h2>
+          <ul class="drama-start-list list-styling"></ul>
+        </div>
+
+        <div class="sidebar sec-cont">
+          <h3>Dagens visningar:</h3>
+          <h4 class="todays-date"></h4>
+          <ul class="todays-shows"></ul>
+        </div>
+      </section>
+    </main>
 
     <footer class="footer sec">
       <div class="footer-content sec-cont">
