--- a/old-html/movies.html
+++ b/old-html/movies.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="static/images/favicon_io/favicon-16x16.png">
     <link rel="manifest" href="static/images/favicon_io/site.webmanifest">
     <script type="module" src="src/JS/main.js"></script>
+    <script type="module" src="src/JS/movies.js" defer></script>
     <script
       src="https://kit.fontawesome.com/04d50240d2.js"
       crossorigin="anonymous"
@@ -15,29 +16,28 @@
     <link rel="stylesheet" href="static/css/main.css" />
     <title>Biograf Luleå</title>
   </head>
-
   <body>
     <header class="sec">
       <div class="header-content-wrap sec-cont">
-        <a href="index" class="logo"
+        <a href="index.html" class="logo"
           ><img src="static/images/Logo.png" alt="logo"
         /></a>
         <nav class="header-nav">
           <button class="header-nav-toggle"></button>
           <menu class="header-menu">
             <li>
-              <a class="header-menu-item active" href="index">Hem</a>
+              <a class="header-menu-item" href="index.html">Hem</a>
             </li>
             <li>
-              <a class="header-menu-item" href="about-us">Om oss</a>
+              <a class="header-menu-item" href="about-us.html">Om oss</a>
             </li>
             <li>
-              <a class="header-menu-item" href="under-construction"
+              <a class="header-menu-item" href="under-construction.html"
                 >Biljettinfo</a
               >
             </li>
             <li>
-              <a class="header-menu-item" href="under-construction"
+              <a class="header-menu-item" href="under-construction.html"
                 >Presentkort</a
               >
             </li>
@@ -54,14 +54,16 @@
         <li class="movies-nav">
           <ul class="movies-nav-list">
             <li class="movies-nav-element">
-              <a href="movies" class="show-all-movies">Filmer </a>
+              <a href="movies.html" id="movies-id" class="show-all-movies"
+                >Filmer
+              </a>
             </li>
           </ul>
         </li>
         <li class="movies-nav">
           <ul class="movies-nav-list">
             <li class="movies-nav-element">
-              <a href="salons"
+              <a href="salons.html"
                 >Salonger </a
               >
             </li>
@@ -70,7 +72,7 @@
         <li class="movies-nav">
           <ul class="movies-nav-list">
             <li class="movies-nav-element">
-              <a href="restaurant"
+              <a href="restaurant.html"
                 >Restaurang </a
               >
             </li>
@@ -79,7 +81,7 @@
         <li class="movies-nav">
           <ul class="movies-nav-list">
             <li class="movies-nav-element">
-              <a href="events"
+              <a href="events.html"
                 >Events </a
               >
             </li>
@@ -88,15 +90,34 @@
         <li class="movies-nav">
           <ul class="movies-nav-list">
             <li class="movies-nav-element">
-              <a href="under-construction">Kontakt</a>
+              <a href="under-construction.html">Kontakt</a>
             </li>
           </ul>
         </li>
       </ul>
     </div>
     </nav>
-    <div>{{{body}}}</div>
-
+    <main class="movies sec">
+      <section class="movies-content sec-cont">
+        <div>
+          <h2 class="movies-h2"></h2>
+          <nav class="sec">
+            <ul class="movies-category-list">
+              <li class="movies-category-element">
+                <a href="movies.html" class="comedy-category">Komedi</a>
+              </li>
+              <li class="movies-category-element">
+                <a href="movies.html" class="action-category">Action</a>
+              </li>
+              <li class="movies-category-element">
+                <a href="movies.html" class="drama-category">Drama</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <ul class="movies-list"></ul>
+      </section>
+    </main>
     <footer class="footer sec">
       <div class="footer-content sec-cont">
         <nav class="footer-nav">
