--- a/old-html/salonA.html
+++ b/old-html/salonA.html
@@ -7,40 +7,30 @@
     <link rel="icon" type="image/png" sizes="32x32" href="static/images/favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="static/images/favicon_io/favicon-16x16.png">
     <link rel="manifest" href="static/images/favicon_io/site.webmanifest">
+    <link rel="stylesheet" href="static/css/main.css" />
     <script type="module" src="src/JS/main.js"></script>
+    <script type="module" src="src/JS/salons.js"></script>
     <script
       src="https://kit.fontawesome.com/04d50240d2.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="static/css/main.css" />
-    <title>Biograf Luleå</title>
+    <title>Salong A</title>
   </head>
-
   <body>
     <header class="sec">
-      <div class="header-content-wrap sec-cont">
-        <a href="index" class="logo"
+      <div class="header-content-wrap">
+        <a href="index.html" class="logo"
           ><img src="static/images/Logo.png" alt="logo"
         /></a>
         <nav class="header-nav">
           <button class="header-nav-toggle"></button>
           <menu class="header-menu">
             <li>
-              <a class="header-menu-item active" href="index">Hem</a>
+              <a class="header-menu-item" href="index.html">Hem</a>
             </li>
-            <li>
-              <a class="header-menu-item" href="about-us">Om oss</a>
-            </li>
-            <li>
-              <a class="header-menu-item" href="under-construction"
-                >Biljettinfo</a
-              >
-            </li>
-            <li>
-              <a class="header-menu-item" href="under-construction"
-                >Presentkort</a
-              >
-            </li>
+            <li><a class="header-menu-item" href="about-us.html">Om oss</a></li>
+            <li><a class="header-menu-item" href="under-construction.html">Biljettinfo</a></li>
+            <li><a class="header-menu-item" href="under-construction.html">Presentkort</a></li>
           </menu>
         </nav>
       </div>
@@ -54,14 +44,14 @@
         <li class="movies-nav">
           <ul class="movies-nav-list">
             <li class="movies-nav-element">
-              <a href="movies" class="show-all-movies">Filmer </a>
+              <a href="movies.html" class="show-all-movies">Filmer </a>
             </li>
           </ul>
         </li>
         <li class="movies-nav">
           <ul class="movies-nav-list">
             <li class="movies-nav-element">
-              <a href="salons"
+              <a href="salons.html"
                 >Salonger </a
               >
             </li>
@@ -70,7 +60,7 @@
         <li class="movies-nav">
           <ul class="movies-nav-list">
             <li class="movies-nav-element">
-              <a href="restaurant"
+              <a href="restaurant.html"
                 >Restaurang </a
               >
             </li>
@@ -79,7 +69,7 @@
         <li class="movies-nav">
           <ul class="movies-nav-list">
             <li class="movies-nav-element">
-              <a href="events"
+              <a href="events.html"
                 >Events </a
               >
             </li>
@@ -88,15 +78,51 @@
         <li class="movies-nav">
           <ul class="movies-nav-list">
             <li class="movies-nav-element">
-              <a href="under-construction">Kontakt</a>
+              <a href="under-construction.html">Kontakt</a>
             </li>
           </ul>
         </li>
       </ul>
     </div>
     </nav>
-    <div>{{{body}}}</div>
-
+    <main class="main-container sec">
+      <div class="salon-description sec-cont">
+        <section class="sec-cont">
+          <div class="salons sec-cont">
+            <div class="undercategory">
+              <h1 class="about-salons">Salong A</h1>
+              <nav class="sec">
+                <ul class="movies-salon-list">
+                  <li class="movies-salon-element">
+                    <a href="salonA.html" id="salon-A">Salong A</a>
+                  </li>
+                  <li class="movies-salon-element">
+                    <a href="salonB.html">Salong B</a>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+            <img src="static/images/Salong_A.jpg" class="salonA"></img>
+            <p class="salon-text">
+              Salong A är vår stora salong med en 500tum stor filmduk och 141st platser.
+              Barco Laser 4K-projektor.
+              Ljud Dolby Atmos.
+              Moderna biofåtöljer, där man på de fyra första raderna i salongen kan luta ryggstödet bakåt för att 
+              få en perfekt vinkel mot filmduken.
+              Rad 8 har Lyxfåtöljer, där man själv väljer inställningar på stolen.
+              Hörslinga finns, den täcker platserna 86-141.
+            </p>
+        </div>
+      </section>
+     
+      <section class="salonA-movie-container sec-cont">
+        <h2 class="salon-h2">Filmer som visas i salongen:</h2>
+        <ul class="salon-movielist">
+        </ul>
+      
+      </section>
+    </div>
+    </main>
     <footer class="footer sec">
       <div class="footer-content sec-cont">
         <nav class="footer-nav">
